--- a/smile_backend/blogs/templates/blog_list.html
+++ b/smile_backend/blogs/templates/blog_list.html
@@ -154,237 +154,24 @@
   flex-wrap: wrap; /* Allow tags to wrap to the next line */
   
 }
-*{
-            box-sizing: border-box;
-            margin:0;
-            padding: 0;
-        }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "montserrat";
+  color: #fff;
+}
         body {
         --color1: #fff;
         --color2: #181818;
       }
-      footer {
-        position: relative;
-        width: 100%;
-        background: black;
-        min-height: 100px;
-        padding: 20px 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-      footer .social_icon,
-      footer .menu {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 10px 0;
-        flex-wrap: wrap;
-      }
-
-      footer .social_icon li,
-      footer .menu li {
-        list-style: none;
-      }
-      footer .social_icon li a {
-        font-size: 2em;
-        color: #fff;
-        margin: 0 10px;
-        display: inline-block;
-        transition: 0.5s;
-      }
-      footer .social_icon li a:hover {
-        transform: translateY(-10);
-      }
-      footer .menu li a {
-        font-size: 1.2em;
-        color: #fff;
-        margin: 0 10px;
-        display: inline-block;
-        text-decoration: none;
-        opacity: 0.75;
-      }
-      footer .menu li a:hover {
-        opacity: 1;
-      }
-      footer p {
-        color: #fff;
-        text-align: center;
-        margin-top: 15px;
-        margin-bottom: 10px;
-        font-size: 1.1em;
-      }
-      footer .wave {
-        position: absolute;
-        top: -100px;
-        left: 0;
-        width: 100%;
-        height: 100px;
-        background: url(montserrat/wave.png); /* Use the wave image as background */
-        background-size: 1000px 100px;
-      }
-      footer .wave#wave1 {
-        z-index: 1000;
-        opacity: 1;
-        bottom: 0;
-        animation: animateWave 4s linear infinite;
-      }
-      footer .wave#wave2 {
-        z-index: 999;
-        opacity: 0.5;
-        bottom: 10px;
-        animation: animateWave_02 4s linear infinite;
-      }
-      footer .wave#wave3 {
-        z-index: 1000;
-        opacity: 0.2;
-        bottom: 15px;
-        animation: animateWave 3s linear infinite;
-      }
-      footer .wave#wave4 {
-        z-index: 999;
-        opacity: 0.7;
-        bottom: 20px;
-        animation: animateWave_02 3s linear infinite;
-      }
-      @keyframes animateWave {
-        0% {
-          background-position-x: 1000px;
-        }
-        100% {
-          background-position-x: 0px;
-        }
-      }
-      @keyframes animateWave_02 {
-        0% {
-          background-position-x: 0px;
-        }
-        100% {
-          background-position-x: 1000px;
-        }
-      }
+      
       .page4_header {
         width: 100%;
         text-align: center;
         margin-top: 250px;
       }
-      header {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 99;
-    box-shadow: 0 0 10px #000;
-    background: rgba(0, 0, 0, 0.5);
-    top: 0; /* Ensure navbar stays at the top */
-    left: 0; /* Ensure navbar stays at the left */
-    right: 0; /* Ensure navbar stays at the right */
-}
-
-     #chk1{
-        display:none;
-     }
-     i{
-        color:#fff;
-        cursor:pointer;
-     }
-     header .logo{
-        flex:1;
-        color:#fff;
-        margin-left:50px;
-        text-transform:uppercase;
-        font-size: 15px;
-     }
-     header .search-box{
-        flex:1;
-        position: relative;
-        
-     }
-     .search-box input{
-        width:100%;
-        height:40px;
-        border:none;
-        outline: none;
-        background: #f2f2f2;
-        border-radius: 30px;
-        color:grey;
-        font-size: 16px;
-        text-align: center;
-        padding-left: 5px;
-        padding-right: 40px;
-       
-     }
-     .search-box button{
-        cursor:pointer;
-        width:40px;
-        height: 40px;
-        border-radius: 30px;
-        border: none;
-        position: absolute;
-        top:0;
-        right:0;
-        transform: scale(0.9);
-        background: rgb(14, 14, 14);
-     }
-     header ul{
-        flex:2;
-        display: flex;
-        justify-content: space-between;
-     }
-     header ul li{
-        list-style: none;
-     }
-     header ul li a{
-        text-decoration: none;
-        color:#fff;
-        font-weight: 600;
-        text-transform: uppercase;
-        padding:10px 15px;
-     }
-     header ul li a:hover{
-        border-bottom: 2px solid cadetblue;
-     }
-     header .menu{
-        font-size:2.5rem;
-        display: none;
-     }
-     @media(max-width:1000px){
-        .search-box button{
-            position: absolute;
-        }
-        header ul{
-            position: fixed;
-            top:100px;
-            right:-100%;
-            background: rgba(0,0,0,0.5);
-            height: calc(100vh - 100px);
-            width:50%;
-            flex-direction: column;
-            align-items: center;
-            transition: right 0.5s linear;
-        }
-        header .menu{
-            display: block;
-            width:100px;
-            text-align: center;
-        }
-        #chk1:checked ~ ul{
-            right:0;
-        }
-     }
-     @media(max-width:600px){
-        header .logo{
-            font-size: 10px;
-            margin-left: 8px;
-        }
-        header ul{
-            width:100%;
-        }
-     }
+    
      .logo img{
         height:40px;
         width:40px;
@@ -440,29 +227,9 @@
       </a>
       {% endfor %}
     </div>
-    <footer>
-      <div class="waves">
-        <div class="wave" id="wave1"></div>
-        <div class="wave" id="wave2"></div>
-        <div class="wave" id="wave3"></div>
-        <div class="wave" id="wave4"></div>
-      </div>
-      <ul class="social_icon">
-        <li><a href="https://www.linkedin.com/company/smile-club-nitk/"><i class="fab fa-linkedin"></i></a></li>
-        <li> <a href="https://youtube.com/@SMILEClub_NITK?si=qk-v-oJZi8M7igKn"><i class="fab fa-youtube"></i></a></li>
-          <li> <a href="https://www.instagram.com/p/C52tiEtLNU5/?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a></li>
-    </ul>
-    <ul class="menu">
-      <li><a href="{% url 'home' %}">Home</a></li>
-      <li><a href="{% url 'team-list' %}">About us </a></li>
-      <li><a href="{% url 'blogs-list' %}">Blog</a></li>
-      <li><a href="{% url 'event-list' %}">Timeline</a></li>
-      <li><a href="{% url 'gallery' %}">Gallery</a></li>
-      <li><a href="{% url 'display_youtube_videos' %}">Videos</a></li>
-      
-    </ul>
-      <p>@2024 Smile Club | All rights reserved</p>
-    </footer>
+
+    {%include 'footer.html' %}
+
 
     {% comment %} <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/gsap.min.js"
