--- a/smile_backend/blogs/templates/gallery.html
+++ b/smile_backend/blogs/templates/gallery.html
@@ -10,16 +10,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
 
     <style>
-        
-        body {
-            background-color: #fd7e14; 
-            color: #495057;
-            size: 3rem ;
-            font-family: 'Garamond', serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            font-family: "montserrat";
+            color: #fff;
         }
-       
+        body {
+            background-color: #fd7e14; 
+            
+        }
+        
         .container {
             padding: 50px;
         }
@@ -34,120 +36,7 @@
             height: 100%;
         }
         
-        /* header {
-        width: 100%;
-        height: 100px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        z-index: 99;
-        box-shadow: 0 0 10px #000;
-        background: rgba(0, 0, 0, 0.5);
-    }
-    
-    #chk1 {
-        display: none;
-    }
-    
-    i {
-        color: #fff;
-        cursor: pointer;
-    } */
-    
-    /* header .logo {
-        color: #fff;
-        margin-left: 25px;
-        text-transform: uppercase;
-        font-size: 15px;
-    }
-    
-    header ul {
-        display: flex;
-        justify-content: space-between;
-        gap:130px;
-    }
-    
-    header ul li {
-        list-style: none;
-    }
-    
-    header ul li a {
-        text-decoration: none;
-        color: #fff;
-        font-weight: 600;
-        text-transform: uppercase;
-        padding: 10px 15px; 
-    }
-    
-    header ul li a:hover {
-        border-bottom: 2px solid cadetblue;
-    }
-    
-    header .menu {
-        font-size: 2.5rem;
-        display: none;
-    }
-     */
-    @media(max-width: 1000px) {
-        header ul {
-            position: fixed;
-            top: 100px;
-            right: -100%;
-            background: rgba(0, 0, 0, 0.5);
-            height: calc(100vh - 100px);
-            width: 50%;
-            flex-direction: column;
-            align-items: center;
-            transition: right 0.5s linear;
-            
-        }
-        
-        header .menu {
-            display: block;
-            width: 100px;
-            text-align: center;
-        }
-        
-        #chk1:checked ~ ul {
-            right: 0;
-        }
        
-    }
-    
-    @media(max-width: 600px) {
-        header .logo {
-            font-size: 10px;
-            margin-left: 8px;
-        }
-        
-        header ul {
-            width: 100%;
-        }
-       
-    }
-    
-    .lo_go img {
-        height: 100px;
-        width: 100px;
-        margin-top: 20px;
-        margin-left: 0px;
-        margin-bottom: 20px;
-    }
-    
-    .heading {
-        width: 90%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        margin: 100px auto;
-    }
-    .icons a {
-        margin-right: 5px; /* Adjust margin as needed */
-    }
-    
     </style>
 </head>
 {%include 'navbar.html' %}
@@ -170,6 +59,8 @@
             {% endfor %}
         </div>
     </div>
+    {%include 'footer.html' %}
     {% bootstrap_javascript %}
+    
 </body>
 </html>
