--- a/smile_backend/blogs/templates/timeline.html
+++ b/smile_backend/blogs/templates/timeline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Transparent Card</title>
-    {% comment %} <link rel="stylesheet" href="{% static 'style.css' %}" /> {% endcomment %}
+   
     {% comment %} <link
       rel="shortcut icon"
       href="https://sidcupfamilygolf.com/wp-content/themes/puttosaurus/favicons/favicon-32x32.png"
@@ -24,13 +24,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
 
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        font-family: "Poppins", sans-serif;
-        box-sizing: border-box;
-      }
-      
+         
+         * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "montserrat";
+  color: #fff;
+}
+
       body {
         background: radial-gradient(closest-corner, #fa0101, #f3f70a);
       }
@@ -190,21 +192,7 @@
       .text-box:hover {
         transition: color 0.5s ease;
       }
-      
-      .background-image {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 1;
-        transition: opacity 0.5s ease;
-      }
-      
-      .container:hover .background-image {
-        opacity: 0.5;
-      }
+    
       
       @media screen and (max-width: 600px) {
         .timeline {
@@ -287,129 +275,9 @@
       .text-box h2 {
         line-height: 1.5;
       }
-      .navbar_t {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000; /* Adjust z-index as needed */
-    /* Additional styling properties */
-   
-  }
-  /* //////////////// */
-  header {
-        width: 100%;
-        height: 100px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        z-index: 99;
-        box-shadow: 0 0 10px #000;
-        background: rgba(0, 0, 0, 0.5);
-    }
+      
     
-    #chk1 {
-        display: none;
-    }
-    
-    i {
-        color: #fff;
-        cursor: pointer;
-    }
-    
-    header .logo {
-        color: #fff;
-        margin-left: 25px;
-        text-transform: uppercase;
-        font-size: 15px;
-    }
-    
-    header ul {
-        display: flex;
-        justify-content: space-between;
-        gap:130px;
-    }
-    
-    header ul li {
-        list-style: none;
-    }
-    
-    header ul li a {
-        text-decoration: none;
-        color: #fff;
-        font-weight: 600;
-        text-transform: uppercase;
-        /* {% comment %} padding: 10px 15px; {% endcomment %} */
-    }
-    
-    header ul li a:hover {
-        border-bottom: 2px solid cadetblue;
-    }
-    
-    header .menu {
-        font-size: 2.5rem;
-        display: none;
-    }
-    
-    @media(max-width: 1000px) {
-        header ul {
-            position: fixed;
-            top: 100px;
-            right: -100%;
-            background: rgba(0, 0, 0, 0.5);
-            height: calc(100vh - 100px);
-            width: 50%;
-            flex-direction: column;
-            align-items: center;
-            transition: right 0.5s linear;
-            
-        }
-        
-        header .menu {
-            display: block;
-            width: 100px;
-            text-align: center;
-            
-        }
-        
-        #chk1:checked ~ ul {
-            right: 0;
-        }
-       
-    }
-    
-    @media(max-width: 600px) {
-        header .logo {
-            font-size: 10px;
-            margin-left: 8px;
-        }
-        
-        header ul {
-            width: 100%;
-        }
-       
-    }
-    
-    .lo_go img {
-        height: 100px;
-        width: 100px;
-        margin-top: 20px;
-        margin-left: 0px;
-        margin-bottom: 20px;
-    }
-    
-    .heading {
-        width: 90%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        margin: 100px auto;
-    }
-    .icons a {
-        margin-right: 5px; /* Adjust margin as needed */
-    }
+  
     </style>
   </head>
   {%include 'navbar.html' %}
@@ -417,15 +285,12 @@
     
     <div class="timeline">
       {% for event in events %}
-          <a href="{% url 'event_detail' event.id %}" style="text-decoration: none; color: inherit;">
+          <!-- <a href="{% url 'event_detail' event.id %}" style="text-decoration: none; color: inherit;"> -->
       <div class="container {% if forloop.counter0|divisibleby:2 %}left-container{% else %}right-container{% endif %}">
         <img src="https://res.cloudinary.com/dmnep85ym/image/upload/v1713781264/sc_pwwbf3.jpg" alt="Test Image">
         <div
           class="text-box {% if forloop.counter0|divisibleby:2 %}left-text-box{% else %}right-text-box{% endif %}"
-          style="
-            {% comment %} background-image: url('/montserrat/blu.jpg'); {% endcomment %}
-            background-size: cover;
-          "
+          
         >
           <div
             class="date {% if forloop.counter0|divisibleby:2 %}left-date{% else %}right-date{% endif %}"
@@ -445,5 +310,8 @@
       </div>
       {% endfor %}
     </div>
+    {%include 'footer.html' %}
+    
   </body>
+ 
 </html>
